--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,20 +2,83 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
 }
 
 header {
     background-color: #2c3e50;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    width: 100vw; 
-    box-sizing: border-box;
+    color: rgb(2, 2, 2);
+    padding-top: 8px;
+    padding-left: 20px;
+    padding-bottom: 4px;
+    width: 96vw; 
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: flex;
+    justify-content: space-between;
+   
+    
+}
+header .SignIn,
+header .SignUp {
+  margin-left: 20px; 
+  color: aliceblue;
+
+}
+header .h1 ,header .SignIn,
+header .SignUp{
+    font-size: 20px;
+}
+  
+  header div {
+    display: flex; 
+    margin-right: 50px;
+    color: #ffffff;
+  }
+  header h2{
+    color:#ffffff
+}
+  
+  header span{
+    color:#a3a96d;
+}
+  
+
+
+/* ======================== */
+
+ 
+ 
+  .intro h2 span {
+    color:#a3a96d;
+  }
+  
+  .catagory {
+    display: flex;
+    flex-direction: column;
+    /* width: 17vw; */
+    width: 60vw !important;
+  
+  }
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    /* align-items: flex-start; */
+    /* gap: 20px; */
+    width: 80% !important; 
+    margin-top: 10px;
 }
 
+.intro{
+    width: 30vw !important;
+    margin-left: 60px;
+}
+
+ 
+/* ============  hooooooooooo   ============== */
 #filter-section {
-    margin: 20px;
+   
     text-align: center;
 }
 
@@ -39,7 +102,7 @@ header {
 }
 
 .filter-btn:hover {
-    background-color: #074f7e;
+    background-color: #a3a96d;
 }
 
 #product-display-area {
@@ -49,7 +112,7 @@ header {
     gap: 20px;
     margin: 20px;
     padding: 20px;
-    width: 100vw; 
+    width: 60vw;
     box-sizing: border-box;
 }
 
@@ -100,7 +163,7 @@ header {
 }
 .ShowMore{
     font-weight: 900;
-    color: rgb(169, 49, 49) !important;
+    color: #a3a96d !important;
     /* background-color: #2c3e50; */
     font-family: Georgia, 'Times New Roman', Times, serif;
     border-radius: 50px;
@@ -116,5 +179,34 @@ header {
     background-color: #a3a96d;
 }
 
+/* ================================= */
 
 
+
+
+
+
+.intro, .catagory {
+    flex-basis: 48%; /* Each div takes up 48% of the container's width */
+    box-sizing: border-box;
+}
+
+.lorem{
+    width: 17vw !important;
+    font-size: 18px;
+    font-weight: 500;
+}
+.footer {
+    background-color: #2c3e50; /* Dark background for the footer */
+    padding: 20px; /* Add some padding for spacing */
+    position: relative; /* Positioning for potential adjustments */
+    bottom: 0; /* Stick to the bottom */
+    width: 100%; /* Full width */
+  }
+  
+  .footer h3 {
+    color: #ffffff; /* White text color for contrast */
+    text-align: center; /* Center align the text */
+    margin: 0; /* Remove default margins */
+  }
+  
